--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h2 class="text-3xl font-bold text-violet-400 mb-4">Continue the Conversation</h2>
             <p class="text-lg mb-8">Did the magic hold your attention? If you have thoughts on the fate of Ren and Kael, or if you're interested in the full manuscript, reach out to the author directly.</p>
             
-            <a href="mailto:author@aethelacademy.com" class="inline-block bg-violet-700 hover:bg-violet-600 text-white font-bold py-3 px-8 rounded-lg shadow-xl transition-all duration-300 transform hover:scale-105">
+            <a href="mailto:tyshawnbey01@gmail.com" class="inline-block bg-violet-700 hover:bg-violet-600 text-white font-bold py-3 px-8 rounded-lg shadow-xl transition-all duration-300 transform hover:scale-105">
                 ✉️ Contact the Author
             </a>
 
@@ -399,3 +399,4 @@
 
 </body>
 </html>
+
